--- a/src/app/basketball/basketball.component.html
+++ b/src/app/basketball/basketball.component.html
@@ -1,1 +1,7 @@
-<p>basketball works!</p>
+<h2>Player Rankings</h2>
+
+<div>
+    <router-outlet></router-outlet>
+    <button (click)="show2018()">2018-2019</button>
+    <button (click)="show2019()">2019-2020</button>
+</div>
